--- a/_config.yml
+++ b/_config.yml
@@ -24,8 +24,8 @@ description              : "Hi, I'm Juwon Cha."
 url                      : "https://juwonc.github.io/"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
-teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
-logo                     : "/assets/images/programmer.png"
+teaser                   : "/assets/images/profile.jpeg"
+logo                     : # "/assets/images/programmer.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
