Change Teaser Image file

--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ description              : "Hi, I'm Juwon Cha."
 url                      : "https://juwonc.github.io/"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
-teaser                   : "/assets/images/profile.jpeg"
+teaser                   : "/assets/images/profile.png"
 logo                     : # "/assets/images/programmer.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
 # breadcrumbs            : false # true, false (default)
