--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ description              : "Hi, I'm Juwon Cha."
 url                      : "https://juwonc.github.io/"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
-teaser                   : "/assets/images/profile.png"
+teaser                   : # 
 logo                     : # "/assets/images/programmer.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
 # breadcrumbs            : false # true, false (default)
@@ -105,7 +105,7 @@ analytics:
 # Site Author
 author:
   name             : "Juwon Cha"
-  avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  avatar           : "/assets/images/profile.png"
   bio              : "Hi, I'm Juwon Cha."
   location         : "South Korea"
   email            :
