--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,7 @@ subtitle                 : # site tagline that appears below site title in masth
 name                     : "Juwon Cha"
 description              : "Hi, I'm Juwon Cha."
 url                      : "https://juwonc.github.io/"
+# url                      : "http://localhost:4000"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # 
