--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,8 @@ title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "Juwon Cha"
 description              : "Hi, I'm Juwon Cha."
-# url                      : "https://juwonc.github.io/"
-url                      : "http://localhost:4000"
+url                      : "https://juwonc.github.io/"
+# url                      : "http://localhost:4000"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # 
