--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,8 @@
 # remote_theme           : "mmistakes/minimal-mistakes"
 minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 dark_theme_toggle        : true
+after_footer_scripts:
+  - /assets/js/custom/dark_theme.js
 
 # Site Settings
 locale                   : "en-US"
