--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,7 @@ repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-m
 teaser                   : # 
 logo                     : # "/assets/images/programmer.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
+future                   : true;
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
 comments:
