Add code block line numbers

--- a/_config.yml
+++ b/_config.yml
@@ -206,6 +206,10 @@ incremental: false
 # Markdown Processing
 kramdown:
   input: GFM
+  syntax_highlighter: rouge
+  syntax_highlighter_opts:
+    block:
+      line_numbers: true
   hard_wrap: false
   auto_ids: true
   footnote_nr: 1
