--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ title                    : "Slow and Steady"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "Juwon Cha"
-description              : "Hi, I'm Juwon Cha."
+description              : "Slow and Steady"
 url                      : "https://juwonc.github.io/"
 # url                      : "http://localhost:4000"
 baseurl                  : # the subpath of your site, e.g. "/blog"
@@ -111,7 +111,7 @@ analytics:
 author:
   name             : "Juwon Cha"
   avatar           : "/assets/images/profile.png"
-  bio              : "Hi, I'm Juwon Cha."
+  bio              : "Hi, I'm Juwon Cha<br><br>Done Is Better Than Perfect"
   location         : "South Korea"
   email            :
   links:
