--- a/_config.yml
+++ b/_config.yml
@@ -111,7 +111,7 @@ analytics:
 author:
   name             : "Juwon Cha"
   avatar           : "/assets/images/profile.png"
-  bio              : "Hi, I'm Juwon Cha<br><br>Done Is Better Than Perfect"
+  bio              : "Done Is Better Than Perfect"
   location         : "South Korea"
   email            :
   links:
